# trollcase

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: cmake-multi-platform.yml  cmake.yml  cmake_unix.yml  cmake_windows.yml
sources/: trollcase.cpp
src/: casers.cpp  casers.h  main.cpp  trollcase.cpp
